# panrun

./: Makefile  flake.nix  panrun.cabal  readme.md
panrun/: Main.hs
