cabal-version:      3.0
name:               panrun

version:            0.1.0.0
build-type:         Simple

executable panrun
  main-is:          Main.hs
  hs-source-dirs:   panrun
  build-depends:    base
                  , optparse-applicative
                  , directory
                  , regex-compat
                  , text
                  , bytestring
                  , pandoc 
                  , pandoc-types

  default-language: Haskell2010

common warnings
    ghc-options: -Wall
